--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
 * {
   background-color: azure;
 }
+
+img {
+  max-width: 100%;
+  /* width: 80%; */
+  height: auto;
+}
+
+h1,
+footer {
+  text-align: center;
+}
+
+figure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+}
